# web-agent

./: .env.example  .gitignore  AGENTS.md  AGENTS.zh-CN.md  README.md  README.zh-CN.md  SKILL.md  SKILL.zh-CN.md  install.md  install.zh-CN.md  oplog.jsonc  pyproject.toml  web-agent
.claude-plugin/: marketplace.json  plugin.json
.github/: VOUCHED.td
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: release.yml
agent-workspace/: agent_helpers.py
agent-workspace/domain-skills/BOSS-zhipin/: chat.zh-CN.md  job-search.zh-CN.md  navigation.zh-CN.md
agent-workspace/domain-skills/agentlist/: discovery.md
agent-workspace/domain-skills/atlas/: overview.md
agent-workspace/domain-skills/bilibili/: navigation.zh-CN.md
agent-workspace/domain-skills/browser-use-cloud/: cloud.md
docs/: snap-linux-headless.md  snap-linux-headless.zh-CN.md
interaction-skills/: connection.zh-CN.md  cookies.zh-CN.md  cross-origin-iframes.zh-CN.md  dialogs.zh-CN.md  downloads.zh-CN.md  drag-and-drop.zh-CN.md  dropdowns.zh-CN.md  iframes.zh-CN.md  network-requests.zh-CN.md  print-as-pdf.zh-CN.md  profile-sync.md  screenshots.md  screenshots.zh-CN.md  scrolling.zh-CN.md  shadow-dom.zh-CN.md  tabs.zh-CN.md  viewport.zh-CN.md
skills/web-agent/: SKILL.md
src/web_agent/: SKILL.md  SKILL.zh-CN.md  __init__.py  _ipc.py  admin.py  auth.py  cdp_client.py  daemon.py  helpers.py  oplog.py  paths.py  run.py  telemetry.py
tests/integration/: test_js.py
tests/unit/: test_admin.py  test_daemon.py  test_helpers.py  test_ipc.py  test_oplog.py  test_run.py  test_skill.py
(+32 files in other folders)
