[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "web-agent"
version = "0.1.3"
description = "The simplest, thinnest, and most powerful harness to control your real browser with your agent."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["agent", "automation", "browser", "cdp", "chrome", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "cdp-use==1.4.5",
    "fetch-use==0.4.0",
    "pillow==12.2.0",
    "websockets==15.0.1",
]

[project.scripts]
web-agent = "web_agent.run:main"

[project.urls]
Homepage = "https://github.com/helihuo/web-agent"
Repository = "https://github.com/helihuo/web-agent"
Issues = "https://github.com/helihuo/web-agent/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web_agent = ["SKILL.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
